schema/testdata/validation_operations_unused_inputs/schema.keel
model Person {
    fields {
        name Text
    }

    operations {
        create createPerson() with (personName: name)
        update updatePerson(id) with (personName: Text)
    }
}
